--- a/package.json
+++ b/package.json
@@ -4,15 +4,29 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon"
+    "start": "nodemon",
+    "prepare": "husky install",
+    "lint": "eslint --fix src/"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "eslint": "^7.26.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.2",
+    "eslint-plugin-prettier": "^3.4.0",
+    "husky": "^6.0.0",
+    "lint-staged": "^11.0.0",
+    "nodemon": "^2.0.7",
+    "prettier": "2.3.0"
   },
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix",
+    "*.{js,css,md}": "prettier --write"
   }
 }
