--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon",
+    "start": "nodemon --exec babel-node --presets=@babel/preset-env -- src/index.js",
     "prepare": "husky install",
-    "lint": "eslint --fix src/"
+    "lint": "eslint --fix src/",
+    "babel-node": "babel-node --presets='@babel/preset-env' --path src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.14.3",
+    "@babel/eslint-parser": "^7.14.3",
+    "@babel/node": "^7.14.2",
+    "@babel/preset-env": "^7.14.2",
     "eslint": "^7.26.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
