--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "prettier": "2.3.0"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "faker": "^5.5.3"
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix",
