--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prettier": "2.3.0"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "faker": "^5.5.3"
   },
